# esp_ghota_example

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  storage_version.ota.in
main/: CMakeLists.txt  KConfig.projbuild  idf_component.yml  main.c
